fixed broken css and dict key values

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -133,10 +133,6 @@
   border-bottom-right-radius: 0px;
 }
 
-form {
-  margin:auto;
-}
-
 .useful_box {
   display: flex;
   align-content: space-between;
@@ -148,4 +144,8 @@ form {
 
 .padleft{
   margin-left: 10px;
+}
+
+.inline {
+  display: inline-block
 }
